--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,43 @@
 {
     "name": "mohsenbagheri/kamui",
     "description": "This service helps you to move your data between services",
+    "homepage": "https://github.com/BagheriMohsen/Kamui",
+    "license": "MIT",
     "autoload": {
         "psr-4": {
             "Mohsenbagheri\\Kamui\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Mohsenbagheri\\Kamui\\Tests\\": "tests"
+        }
+    },
     "authors": [
         {
             "name": "Mohsen Bagheri",
-            "email": "bagherimohsenbagheri@gmail.com"
+            "email": "bagherimohsenbagheri@gmail.com",
+            "role": "Developer"
         }
     ],
-    "require": {}
+    "require": {
+        "php": "8.1.*",
+        "laravel/framework": "9.*"
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Mohsenbagheri\\Kamui\\Providers\\KamuiServiceProvider"
+            ]
+        }
+    }
+
 }
