fix composer.json provider

--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "extra": {
         "laravel": {
             "providers": [
-                "Mohsenbagheri\\Kamui\\Providers\\KamuiServiceProvider"
+                "Mohsenbagheri\\Kamui\\KamuiServiceProvider"
             ]
         }
     }
